k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend-service
  namespace: notes-dev
spec:
  type: ClusterIP
  selector:
    app: portfolio-frontend
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
